Migrate from Spring boot to Quarkus